Added some more functionality to program compiler allowing now for named directories for the .class files with automatic name detection from //Name: comment and also more information getting returned.